Fix spacing for ecl-content-block__list

--- a/src/implementations/vanilla/components/content-block/_content-block.scss
+++ b/src/implementations/vanilla/components/content-block/_content-block.scss
@@ -165,6 +165,10 @@ $_link-separator-color: null !default;
   }
 }
 
+.ecl-content-block__list + .ecl-content-block__list {
+  margin-top: map.get(theme.$spacing, 'l');
+}
+
 .ecl-content-block > *:first-child {
   margin-top: 0;
 }
